# foundry-eval-spike

./: .env.example  README.md  claude.md
docs/: agent-evaluate-sdk.md  agent-evaluators.md  azure-openai-graders.md  cloud-evaluation.md  custom-evaluators.md  evaluate-generative-ai-app.md  evaluate-results.md  general-purpose-evaluators.md  mcp.md  observability.md  rag-evaluators.md  risk-safety-evaluators.md  textual-similarity-evaluators.md  usecase:batch-evaluation-workflow.md
examples/: eval_utils.py  foundry_agent_target_eval.py  pyproject.toml  spike_mcp_eval.py
examples/agent_builtin_eval/: __init__.py  data.py  run.py
examples/builtin_eval/: __init__.py  data.py  run.py
examples/custom_code_eval/: __init__.py  data.py  evaluator.py  run.py
examples/custom_llm_eval/: __init__.py  data.py  evaluator.py  run.py
examples/foundry_agent_eval/: __init__.py  agent.py  run.py
examples/foundry_agent_eval/evaluators/: __init__.py  response_helpfulness.py  response_length.py
examples/foundry_agent_eval/tools/: __init__.py  weather.py
examples/mcp_cloud_eval/: __init__.py  agent.py  data.py  run.py  tools.py
examples/shared/: __init__.py  clients.py  eval_runner.py
scripts/: strip_foundry_classic.py
